WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250567
[@property] Rules in shadow trees should be ignored.
https://bugs.webkit.org/show_bug.cgi?id=250567
Summary
[@property] Rules in shadow trees should be ignored.
Antti Koivisto
Reported
2023-01-13 05:56:20 PST
"A @property is invalid if it occurs in a stylesheet inside of a shadow tree, and must be ignored."A
https://drafts.css-houdini.org/css-properties-values-api/#at-property-rule
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-01-13 05:56:42 PST
<
rdar://problem/104221943
>
Antti Koivisto
Comment 2
2023-01-13 06:00:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8617
EWS
Comment 3
2023-01-13 11:43:39 PST
Committed
258880@main
(997d987fd5b6): <
https://commits.webkit.org/258880@main
> Reviewed commits have been landed. Closing PR #8617 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug